<resources>
    <string name="app_name">Practice</string>
    <string name="top5">Топ-5</string>
    <string name="listhotel">Список отелей</string>
    <string name="maphotel">Отели на карте</string>
    <string name="breakfast">Завтрак: </string>
    <string name="detail">Подробнее</string>
    <string name="review">Оценить</string>
    <string name="settings">Настройки</string>
    <string name="refresh">Обновить</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="use_google">Использовать Google</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="sign_in">Вход</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="your_name">Как вас зовут?</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="password_please">Придумайте пароль</string>
    <string name="email_please">Введите ваш адрес электронной почты</string>
    <string name="email">Email</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="show">показать</string>
    <string name="add_hotel">Добавить отель</string>
    <string name="hotel_title">Название отеля</string>
    <string name="hotel_address">Адрес отеля</string>
    <string name="start_rating">Оценка отеля</string>
    <string name="photo">Фотография</string>
    <string name="add">Добавить</string>
    <string name="give_feedback">Оставить отзыв</string>
    <string name="rating">Оценка</string>
    <string name="feedback">Ваш отзыв</string>
    <string name="signed_out">Выход</string>
    <string name="sign_out">Выход</string>
    <string name="disconnect">Отсоединение</string>
    <string name="test_email">Сударь да у вас проблема с мылом</string>

    <string name="validation_email_error">Формат вашей электронной почты не верен</string>
    <string name="validation_password_error">Пароль должен быть длинной не меньше 8, но не больше 40 символов</string>
    <string name="validation_first_name_error">Имя должно начинаться с заглавной буквы и содержать только буквы</string>
    <string name="validation_last_name_error">Фамилия должно начинаться с заглавной буквы и содеражть только буквы</string>
    <string name="no_breakfast">нет завтрака</string>
    <string name="there_is_breakfast">есть завтрак</string>
    <string name="validation_hotel_title_error">Название отеля должно быть не менее 3 букв, но не более 40</string>
    <string name="validation_address_error">Вы ввели некоректный адрес</string>
    <string name="error">Ошибка</string>
</resources>
