<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootContainer"
    tools:context=".activities.HotelAddActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_hotel_btn"
        android:layout_below="@id/header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Text.Title"
                android:text="@string/hotel_title" />

            <EditText
                android:id="@+id/hotel_title_txt"
                style="@style/InputField"
                android:hint="@string/hotel_title"
                android:inputType="textPersonName" />

            <TextView
                style="@style/Text.Title"
                android:text="@string/hotel_address" />

            <EditText
                android:id="@+id/hotel_address_txt"
                style="@style/InputField"
                android:hint="@string/hotel_address"
                android:inputType="textPersonName" />

            <TextView
                style="@style/Text.Title"
                android:text="@string/start_rating" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/InputField.Star"
                android:rating="@integer/hotel_default_star_number" />

            <TextView
                style="@style/Text.Title"
                android:text="@string/breakfast" />

            <ToggleButton
                android:id="@+id/has_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/no_breakfast"
                android:textOn="@string/there_is_breakfast" />

            <TextView
                style="@style/Text.Title"
                android:text="@string/photo" />

            <ImageButton
                android:id="@+id/add_photo_btn"
                style="@style/Button.Transparent.AddButton"
                app:srcCompat="@drawable/add_icon" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_hotel_btn"
        style="@style/Button.BottomLevel"
        android:text="@string/add" />
</RelativeLayout>
