<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RootContainer"
    tools:context=".activities.FeedbackAboutHotelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text.Title"
            android:text="@string/feedback" />

        <EditText
            android:id="@+id/feedback_txt"
            style="@style/InputField"
            android:hint="@string/feedback"
            tools:lines="5" />

        <TextView
            style="@style/Text.Title"
            android:text="@string/rating" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/InputField.Star"
            tools:rating="2" />

    </LinearLayout>

    <Button
        android:id="@+id/feedback_btn"
        style="@style/Button.BottomLevel"
        android:text="@string/add" />
</RelativeLayout>
