<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_hotel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photoHotel"
                android:layout_width="450dp"
                android:layout_height="200dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:layout_margin="5dp"
                tools:background="@drawable/cosmos_moscow"/>

            <TextView
                android:id="@+id/titleHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Космос"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_alignBottom="@+id/photoHotel"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/addressHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photoHotel"
                android:layout_marginLeft="10dp"
                tools:text="Москва"
                android:textStyle="italic"
                android:textSize="25sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressHotel"
                android:id="@+id/ratingHotel">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:id="@+id/ratingStarHotel"
                    style="?android:ratingBarStyleIndicator"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberHotelReviews"
                    android:layout_gravity="center"
                    tools:text="238 отзывов"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ratingHotel"
                android:id="@+id/breakfast">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/breakfast"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/isBreakfast"
                    android:saveEnabled="false"
                    android:checked="true"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/breakfast"
                android:id="@+id/lineHotel"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lineHotel"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:text="@string/detail"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:text="@string/review"
                    android:background="@android:color/transparent" />
            </LinearLayout>



        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>